# kia-connect-mcp

./: .env.example  .gitignore  LICENSE  README.md  kia  pyproject.toml
kia_mcp/: cli.py  client.py  config.py  server.py
web/: app.py
web/static/js/: sw.js
web/templates/: base.html  car.html  controls.html  dashboard.html  trips.html
